Add teddy.jpg image file to the repository

--- a/about.html
+++ b/about.html
@@ -21,5 +21,11 @@
     <p>Hello! I’m Chhavi Sharma, a student who loves organizing and decorating small spaces. 
     This website is where I share simple tips & favorite products to help you create a cozy, clutter-free home.</p>
   </div>
+  <span class="floating-teddy">
+    <img src="teddy.jpg" alt="Teddy Bear" />
+  </span>
+  <!-- Floating hearts container -->
+  <div id="hearts-container"></div>
+  <script src="script.js"></script>
 </body>
 </html>
