--- a/contact.html
+++ b/contact.html
@@ -30,5 +30,11 @@
       <button type="submit" class="btn">Send</button>
     </form>
   </div>
+  <span class="floating-teddy">
+    <img src="teddy.jpg" alt="Teddy Bear" />
+  </span>
+  <!-- Floating hearts container -->
+  <div id="hearts-container"></div>
+  <script src="script.js"></script>
 </body>
 </html>
