--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,9 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <span class="floating-teddy">
+      <img src="teddy.jpg" alt="Teddy Bear" />
+    </span>
   </header>
 
   <div class="container">
@@ -23,5 +26,9 @@
       <li><a href="post1.html">10 Small Kitchen Storage Ideas You’ll Love</a></li>
     </ul>
   </div>
+
+  <!-- Floating hearts container -->
+  <div id="hearts-container"></div>
+  <script src="script.js"></script>
 </body>
 </html>
