Update blog and index pages with new post titles and images; add post1.html for wall paintings

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
   <div class="container">
     <h2>All Posts</h2>
     <ul>
-      <li><a href="post1.html">10 Small Kitchen Storage Ideas You’ll Love</a></li>
+      <li><a href="post1.html">5 Wall Paintings for Home Decor under 500</a></li>
     </ul>
   </div>
 
