added new web page to the website

--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
     <h2>All Posts</h2>
     <ul>
       <li><a href="post1.html">5 Wall Paintings for Home Decor under 500</a></li>
+      <li><a href="post2.html">6 Aesthetic Lightings for Home Decor under 500.</a></li>
     </ul>
   </div>
 
