claimed my website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cozy Home Organization</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="p:domain_verify" content="9c7339d143b9c974256c12bfd2cd0726"/>
 </head>
 <body>
   <header>
