--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cozy Home Organization</title>
+  <title>My Home Store</title>
   <link rel="stylesheet" href="style.css">
   <meta name="p:domain_verify" content="9c7339d143b9c974256c12bfd2cd0726"/>
 </head>
 <body>
   <header>
-    <h1>Cozy Home Organization</h1>
+    <h1>My Home Store</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="blog.html">Blog</a>
