--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Home Store</title>
   <link rel="stylesheet" href="style.css">
   <meta name="p:domain_verify" content="9c7339d143b9c974256c12bfd2cd0726"/>
+  <meta name="verify-admitad" content="dd880e4646" />
 </head>
 <body>
   <header>
